// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyCell Component 7386010: [Given] no props are provided [Expect] the component should render 1`] = `
<div
  id="root"
>
  <div
    class="entity-table_table-cell"
  >
    <span>
      -
    </span>
  </div>
</div>
`;

exports[`CopyCell Component 7434643: [Given] value is 'null' [Expect] the checkmark to not be visible 1`] = `
<div
  class="entity-table_table-cell"
  id="MockCheckMarkCellId"
>
  <span
    id="MockCheckMarkCellIdValue"
  >
    -
  </span>
</div>
`;

exports[`CopyCell Component 7434644: [Given] value is '' [Expect] the checkmark to not be visible 1`] = `
<div
  class="entity-table_table-cell"
  id="MockCheckMarkCellId"
>
  <span
    id="MockCheckMarkCellIdValue"
  >
    -
  </span>
</div>
`;

exports[`CopyCell Component 7434645: [Given] value is '     ' [Expect] the checkmark to be visible 1`] = `
<div
  class="entity-table_table-cell"
  id="MockCheckMarkCellId"
>
  <span
    id="MockCheckMarkCellIdValue"
  >
    -
  </span>
</div>
`;

exports[`CopyCell Component 7434646: Given] value is '4dec165f-4093-4182-bd72-88754' [Expect] the checkmark to be visible 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  background-color: #0f5ca3;
  color: #ffffff;
  border-color: transparent;
  font-family: inherit;
  height: 40px;
  padding: 12px 16px;
  border-width: 1px;
  border-style: solid;
  font-size: 14px;
  line-height: 16px;
  text-transform: none;
  -webkit-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
  cursor: pointer!important;
  border-radius: 4px;
  padding: 0;
  width: 40px;
  text-align: center;
}

.emotion-0:hover {
  background: #0a3d6d;
  color: #ffffff;
}

.emotion-0:hover [data-type="nui-tooltip"] {
  opacity: 1;
  visibility: visible;
}

.emotion-0:focus {
  background: #0a3d6d;
  border-color: #4ea1ef;
  box-shadow: 0px 0px 3px #4ea1ef;
}

.emotion-0:active {
  background: #051f36;
}

.emotion-0:disabled {
  pointer-events: none;
  cursor: default;
  background: #f7fafc;
  color: #61707c;
  border-color: transparent;
}

@media only screen and (max-width: 768px) {
  .emotion-0 {
    height: 40px;
    padding: 12px;
    width: 40px;
  }
}

.emotion-1 {
  font-size: 12px;
  line-height: 40px;
}

.emotion-1+span {
  margin-left: 4px;
}

@media only screen and (max-width: 768px) {
  .emotion-1 {
    line-height: 16px;
  }
}

<div
  class="entity-table_table-cell"
  id="MockCheckMarkCellId"
>
  <span
    id="MockCheckMarkCellIdValue"
  >
    4dec165f-4093-4182-bd72-88754
  </span>
  <button
    class="copy-button emotion-0"
    id="MockCheckMarkCellIdCopyButton"
    type="button"
  >
    <i
      class="copy-button_icon q4i-clone-duplicate-4pt emotion-1"
      id="MockCheckMarkCellIdCopyButtonIcon"
    />
  </button>
</div>
`;

exports[`mapIdToCopyCell 7386011: [Given] the function is passed not no props [Expect] the component should render 1`] = `
<div
  id="root"
>
  <div
    class="entity-table_table-cell"
  >
    <span>
      -
    </span>
  </div>
</div>
`;

exports[`mapIdToCopyCell 7434647: [Given] value is 'null' [Expect] the checkmark to not be visible 1`] = `
<div
  class="entity-table_table-cell"
  id="MockCheckMarkCellCopyCell-4dec165f-4093-4182-bd72-88754"
>
  <span
    id="MockCheckMarkCellCopyCell-4dec165f-4093-4182-bd72-88754Value"
  >
    -
  </span>
</div>
`;

exports[`mapIdToCopyCell 7434648: [Given] value is '' [Expect] the checkmark to not be visible 1`] = `
<div
  class="entity-table_table-cell"
  id="MockCheckMarkCellCopyCell-4dec165f-4093-4182-bd72-88754"
>
  <span
    id="MockCheckMarkCellCopyCell-4dec165f-4093-4182-bd72-88754Value"
  >
    -
  </span>
</div>
`;

exports[`mapIdToCopyCell 7434649: [Given] value is '     ' [Expect] the checkmark to be visible 1`] = `
<div
  class="entity-table_table-cell"
  id="MockCheckMarkCellCopyCell-4dec165f-4093-4182-bd72-88754"
>
  <span
    id="MockCheckMarkCellCopyCell-4dec165f-4093-4182-bd72-88754Value"
  >
    -
  </span>
</div>
`;

exports[`mapIdToCopyCell 7434650: [Given] value is '4dec165f-4093-4182-bd72-88754' [Expect] the checkmark to be visible 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  background-color: #0f5ca3;
  color: #ffffff;
  border-color: transparent;
  font-family: inherit;
  height: 40px;
  padding: 12px 16px;
  border-width: 1px;
  border-style: solid;
  font-size: 14px;
  line-height: 16px;
  text-transform: none;
  -webkit-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
  cursor: pointer!important;
  border-radius: 4px;
  padding: 0;
  width: 40px;
  text-align: center;
}

.emotion-0:hover {
  background: #0a3d6d;
  color: #ffffff;
}

.emotion-0:hover [data-type="nui-tooltip"] {
  opacity: 1;
  visibility: visible;
}

.emotion-0:focus {
  background: #0a3d6d;
  border-color: #4ea1ef;
  box-shadow: 0px 0px 3px #4ea1ef;
}

.emotion-0:active {
  background: #051f36;
}

.emotion-0:disabled {
  pointer-events: none;
  cursor: default;
  background: #f7fafc;
  color: #61707c;
  border-color: transparent;
}

@media only screen and (max-width: 768px) {
  .emotion-0 {
    height: 40px;
    padding: 12px;
    width: 40px;
  }
}

.emotion-1 {
  font-size: 12px;
  line-height: 40px;
}

.emotion-1+span {
  margin-left: 4px;
}

@media only screen and (max-width: 768px) {
  .emotion-1 {
    line-height: 16px;
  }
}

<div
  class="entity-table_table-cell"
  id="MockCheckMarkCellCopyCell-4dec165f-4093-4182-bd72-88754"
>
  <span
    id="MockCheckMarkCellCopyCell-4dec165f-4093-4182-bd72-88754Value"
  >
    4dec165f-4093-4182-bd72-88754
  </span>
  <button
    class="copy-button emotion-0"
    id="MockCheckMarkCellCopyCell-4dec165f-4093-4182-bd72-88754CopyButton"
    type="button"
  >
    <i
      class="copy-button_icon q4i-clone-duplicate-4pt emotion-1"
      id="MockCheckMarkCellCopyCell-4dec165f-4093-4182-bd72-88754CopyButtonIcon"
    />
  </button>
</div>
`;
